# model/job.js
@@ -14,19 +14,28 @@ const jobSchema = mongoose.Schema(
       type: String,
       required: true,
     },
+    business_name:{
+      type: String,
+      required: false
+    },
     status: {
       type: String,
-      enum: ['NEW','INPROGRESS','ONHOLD','COMPLETED'],
-      default: 'NEW'
+      enum: ['NEW','INPROGRESS','ONHOLD','COMPLETED','DROPPED'],
+      default: 'NEW',
+      required: true
     },
     service_type: {
       type: String,
-      enum: ['VECTOR_ART_WORK','DIGITIZING'],
+      enum: ['VECTOR_ART_WORK','DIGITIZING','BUSINESS_CARD','BROUCHER','LOGO','CARTOON','OTHERS'],
       required: true,
     },
     memo: {
       type: String,
       required: true,
+    },
+    additional_details: {
+      type: Object,
+      required: false
     },
     files: [{
       url: {
@@ -36,6 +45,29 @@ const jobSchema = mongoose.Schema(
       name: {
         type: String,
         required: false
+      }
+    }
+    ],
+    final_files: [{
+      url: {
+        type: String,
+        required: false
+      },
+      name: {
+        type: String,
+        required: false
+      }
+    }],
+    comments: [{
+      name: {
+        type: String,
+      },
+      comment: {
+        type: String
+      },
+      time: {
+        type : Date, 
+        default: Date.now 
       }
     }
     ]
